--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm install && pnpm run prisma:generate && pnpm run build"
+  command = "pnpm install --shamefully-hoist && pnpm run prisma:generate && pnpm run build"
   publish = ".next"
 
 [[plugins]]
